--- a/Neon.Web/wwwroot/html/user-message.html
+++ b/Neon.Web/wwwroot/html/user-message.html
@@ -1,3 +1,4 @@
 ﻿<li class="neon-user-message">
-	{{ message }}
+    <span class="{{username-class}}">{{username-prefix}}</span><span class="{{username-class}}">{{username}}</span><span class="{{username-class}}">{{username-suffix}}</span>
+    <span class="{{message-class}}">{{message}}</span>
 </li>
