--- a/Neon.Web/wwwroot/html/user-opponent.html
+++ b/Neon.Web/wwwroot/html/user-opponent.html
@@ -1,3 +1,3 @@
-﻿<button class="neon-user-{{username}} neon-button-accented">
+﻿<button type="button" class="neon-button-accent" data-username="{{username}}">
     {{username}}
 </button>
