user request alert test working

--- a/Neon.Web/wwwroot/html/lobby-active-user.html
+++ b/Neon.Web/wwwroot/html/lobby-active-user.html
@@ -1,3 +1,1 @@
-﻿<button type="button" class="neon-button-accent" data-username="{{username}}">
-    {{username}}
-</button>
+﻿<button type="button" class="neon-button-accent" data-user-key="{{key}}">{{username}}</button>
